<resources>
    <string name="app_name">TestApp</string>

    <string name="preferences_file_key" translatable="false">com.musala.groche.carsapp.user_prefs</string>

    <string name="title_cars">Cars</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_items">Items</string>
    <string name="title_settings">Settings</string>
    <string name="title_car_details">Car details</string>
    <string name="title_item_details">Item details</string>
    <string name="title_manufacturers">Manufacturers</string>
    <string name="title_engines">Engines</string>
    <string name="title_fuels">Fuels</string>
    <string name="title_transmissions">Transmissions</string>
    <string name="title_dialog">Choose option</string>

    <string name="msg_no_item">Sorry, no elements to display</string>
    <string name="action_items">Items</string>
    <string name="activity_title_home">Notes</string>

    <string name="settings_views">Views</string>
    <string name="settings_languages">Languages</string>
    <string name="settings_title_list">List</string>
    <string name="settings_title_grid">Grid</string>
    <string name="settings_title_eng">English</string>
    <string name="settings_title_fre">French</string>

    <string name="settings_opt_list" translatable="false">list</string>
    <string name="settings_opt_grid" translatable="false">grid</string>
    <string name="settings_opt_en" translatable="false">en</string>
    <string name="settings_opt_fr" translatable="false">fr_FR</string>

    <string name="settings_selected_view" translatable="false">UserView</string>
    <string name="settings_selected_lang" translatable="false">UserLang</string>

    <string name="lbl_new_car_title">New Car</string>
    <string name="lbl_edit_car_title">Edit Car</string>
    <string name="lbl_new_manufacturer_title">New Manufacturer</string>
    <string name="lbl_edit_manufacturer_title">Edit Manufacturer</string>
    <string name="lbl_new_engine_title">New Engine</string>
    <string name="lbl_edit_engine_title">Edit Engine</string>
    <string name="lbl_new_fuel_title">New Fuel</string>
    <string name="lbl_edit_fuel_title">Edit Fuel</string>
    <string name="lbl_new_transmission_title">New Transmission</string>
    <string name="lbl_edit_transmission_title">Edit Transmission</string>
    <string name="lbl_favorite">Favorite</string>

    <string name="description_element_img">Car picture</string>

    <string name="hint_enter_manuf">Manufacturer</string>
    <string name="hint_enter_model">Model</string>
    <string name="hint_enter_label">Label</string>
    <string name="hint_enter_year">Year</string>
    <string name="hint_enter_price">Price</string>
    <string name="hint_enter_engine">Engine</string>
    <string name="hint_enter_fuel">Fuel</string>
    <string name="hint_enter_transmission">Transmission</string>
    <string name="hint_enter_description">Description</string>
    <string name="hint_enter_imgurl">Image URL</string>
    <string name="hint_enter_favorite">Favorite</string>

    <string name="toast_fill_every_fields">Please fill up every field</string>

</resources>
