<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="@dimen/text_line_spacing"
        android:text="@string/lbl_new_car_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_car_title"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/manufacturer_spinner"
        style="@style/spinner_view">
    </Spinner>

    <EditText
        android:id="@+id/model"
        android:hint="@string/hint_enter_model"
        android:inputType="textCapSentences|text"
        style="@style/edit_text_new_car"/>

    <EditText
        android:id="@+id/year"
        android:hint="@string/hint_enter_year"
        android:inputType="number"
        style="@style/edit_text_new_car"/>

    <EditText
        android:id="@+id/price"
        android:hint="@string/hint_enter_price"
        android:inputType="numberDecimal"
        style="@style/edit_text_new_car"/>

    <Spinner
        android:id="@+id/engine_spinner"
        style="@style/spinner_view">
    </Spinner>

    <Spinner
        android:id="@+id/fuel_spinner"
        style="@style/spinner_view">
    </Spinner>

    <Spinner
        android:id="@+id/transmission_spinner"
        style="@style/spinner_view">
    </Spinner>

    <EditText
        android:id="@+id/description"
        android:hint="@string/hint_enter_description"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="2"
        style="@style/edit_text_new_car" />

    <EditText
        android:id="@+id/imgurl"
        android:hint="@string/hint_enter_imgurl"
        android:inputType="textCapSentences|text"
        style="@style/edit_text_new_car"/>

    <EditText
        android:id="@+id/favorite"
        android:hint="@string/hint_enter_favorite"
        android:inputType="number"
        style="@style/edit_text_new_car" />

</LinearLayout>