<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relative_layout"
    tools:context=".views.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/title_settings"
            android:textSize="@dimen/title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_views"
            android:textSize="@dimen/subtitle"
            android:textAlignment="center"
            android:background="@color/light_grey"/>

        <RelativeLayout
            android:id="@+id/list_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_opt_list"
                android:textSize="@dimen/option"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/checkBox_list"/>

            <CheckBox
                android:id="@+id/checkBox_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/grid_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_opt_grid"
                android:textSize="@dimen/option"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/checkBox_grid"/>

            <CheckBox
                android:id="@+id/checkBox_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_languages"
            android:textSize="@dimen/subtitle"
            android:textAlignment="center"
            android:background="@color/light_grey"/>

        <RelativeLayout
            android:id="@+id/english_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_opt_eng"
                android:textSize="@dimen/option"/>

            <CheckBox
                android:id="@+id/checkBox_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/french_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_opt_fre"
                android:textSize="@dimen/option"/>

            <CheckBox
                android:id="@+id/checkBox_french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>